fix overlap

--- a/Image Access Site/css/free-flow.css
+++ b/Image Access Site/css/free-flow.css
@@ -199,6 +199,7 @@
     width: 10%;
     font-size: larger;
     font-weight: 600;
+    margin-top: 1%;
 }
 
 .infoblock .opus_output_block5 {
